# singleton

./: .gitignore  CHANGELOG.md  README.md  singleton.cabal
src/Control/: Singleton.hs
test/: Main.hs  Unique.hs
