cabal-version:      3.0
name:               singleton
version:            0.1.0.0
synopsis:           Proof-of-concept implementation for a proposed top-level mutable state API.
description:        This package provides a sample implementation for the Singleton API, which
                    saves the results of certain IO actions to be global in the process.
                    In particular, by saving the result of newIORef, we can achieve top-level
                    mutable state.
license:            Apache-2.0
license-file:       LICENSE
author:             Nathan Poje
maintainer:         circuitcr4ft@gmail.com
copyright:          Copyright 2024 Nathan Poje

                    Licensed under the Apache License, Version 2.0 (the "License");
                    you may not use this file except in compliance with the License.
                    You may obtain a copy of the License at

                        http://www.apache.org/licenses/LICENSE-2.0

                    Unless required by applicable law or agreed to in writing, software
                    distributed under the License is distributed on an "AS IS" BASIS,
                    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                    See the License for the specific language governing permissions and
                    limitations under the License.
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Singleton
    -- other-modules:
    other-extensions:
        LambdaCase,
        ScopedTypeVariables
    build-depends:
        base ^>=4.17.2.1,
        focus,
        stm,
        stm-containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite singleton-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    Unique
    other-extensions: TupleSections
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        singleton,
        extra,
        hspec
